--- a/index.html
+++ b/index.html
@@ -8,5 +8,40 @@
 </head>
 <body>
     <h1> hello git hub</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+            <div class="col">
+                <div class="card"></div>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
