--- a/index.html
+++ b/index.html
@@ -1,47 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git hub</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <h1> hello git hub</h1>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
-            <div class="col">
-                <div class="card"></div>
-            </div>
 
         </div>
     </div>
+    <main class="site_main">
+        <section class="firstsection">
+
+        </section>
+    </main>
 </body>
+
 </html>
